development/00-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: development
