development/apprise.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise-private
  labels:
    app: apprise
    project: private
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apprise
      project: private
  template:
    metadata:
      labels:
        app: apprise
        project: private
    spec:
      containers:
      - name: apprise-private
        image: linuxserver/apprise-api:0.8.2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apprise-private
  labels:
    app: apprise
    project: private
  namespace: development
spec:
  selector:
    app: apprise
    project: private
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise-home
  labels:
    app: apprise
    project: home
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apprise
      project: home
  template:
    metadata:
      labels:
        app: apprise
        project: home
    spec:
      containers:
      - name: apprise-home
        image: linuxserver/apprise-api:0.8.2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apprise-home
  labels:
    app: apprise
    project: home
  namespace: development
spec:
  selector:
    app: apprise
    project: home
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
