development/99-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-issuer"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - private.zero-ml.com
      secretName: tls-private
    - hosts:
        - home.zero-ml.com
      secretName: tls-home
    - hosts:
        - k8s.zero-ml.com
      secretName: tls-k8s
  rules:
    - host: private.zero-ml.com
      http:
        paths:
          - path: /notify/
            pathType: Exact
            backend:
              service:
                name: apprise-private
                port:
                  number: 8000
    - host: home.zero-ml.com
      http:
        paths:
          - path: /notify/
            pathType: Exact
            backend:
              service:
                name: apprise-home
                port:
                  number: 8000
    - host: k8s.zero-ml.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
